# ExtPybis

./: CITATION.cff  README.md  environment.yml  pyproject.toml
.conda/: conda_build_config.yaml  meta.yaml
.github/workflows/: extpybis_tests.yml
extpybis/: interbis.py  openbis.py
tests/: conftest.py  test_extpybis.py  test_interbis.py
tests/init_docker/: init_settings_docker.py
tests/test_files/: dataset1.txt  gen_sample_properties.csv
