[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Cezary Kujath", email="cezary.kujath@bam.de" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
description = "Package extending the functionality of Pybis"
license = {file = "LICENSE"}
name = "extpybis"
readme = "REAMDE.md"
requires-python = ">=3.9"
version = "0.0.2"

[project.urls]
repository = "https://github.com/BAMresearch/ExtPybis.git"

[tool.pytest.ini_options]
pythonpath = [
  "extpybis"
]

[tool.ruff]
line-length = 119
